fix design on small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -357,6 +357,15 @@ table {
 @media all and (max-width: 1000px) {
   .grid {
     grid-template-columns: 1fr !important;
+    width: 100%;
+  }
+
+  .grid__item {
+    max-width: 100% !important;
+  }
+
+  .project__photo {
+    max-width: 100%;
   }
 }
 /*
